Fix no background for nav on mobile

--- a/src/components/layout/Navbar/Navbar.module.scss
+++ b/src/components/layout/Navbar/Navbar.module.scss
@@ -49,6 +49,10 @@
             transition: all 0.2s;
             height: $nav-list-heigth;
             box-shadow: -0.125rem 0 0 0 rgb(0 0 0 / 11%);
+            @media (max-width: $desktop-size) {
+                @include fancyBluryBackground;
+                height: 100vh;
+            }
 
             &.active {
                 right: 0;
